fix: Update image paths after moving index.html to root

--- a/index.html
+++ b/index.html
@@ -502,11 +502,11 @@
 
   <header class="header">
     <div class="logo-ecosystem">
-      <img src="logo-cropped.jpg" alt="Hệ sinh thái" class="logo-main">
+      <img src="public/logo-cropped.jpg" alt="Hệ sinh thái" class="logo-main">
       <div class="logo-partners">
-        <img src="images/tech.png" alt="Techcombank">
-        <img src="images/masterise.jpg" alt="Masterise">
-        <img src="images/onemount.png" alt="OneMOUNT">
+        <img src="public/images/tech.png" alt="Techcombank">
+        <img src="public/images/masterise.jpg" alt="Masterise">
+        <img src="public/images/onemount.png" alt="OneMOUNT">
       </div>
     </div>
     <div class="header-actions">
@@ -1578,7 +1578,7 @@
             
             <div class="privacy-item">
               <div class="privacy-info">
-                <img src="images/tech.png" alt="Techcombank" class="privacy-logo">
+                <img src="public/images/tech.png" alt="Techcombank" class="privacy-logo">
                 <div>
                   <div class="privacy-name">Techcombank</div>
                   <div class="privacy-desc">Sản phẩm tài chính, thẻ tín dụng, vay, tiết kiệm</div>
@@ -1592,7 +1592,7 @@
 
             <div class="privacy-item">
               <div class="privacy-info">
-                <img src="images/masterise.jpg" alt="Masterise" class="privacy-logo">
+                <img src="public/images/masterise.jpg" alt="Masterise" class="privacy-logo">
                 <div>
                   <div class="privacy-name">Masterise Homes</div>
                   <div class="privacy-desc">Dự án bất động sản, căn hộ, ưu đãi cư dân</div>
@@ -1606,7 +1606,7 @@
 
             <div class="privacy-item">
               <div class="privacy-info">
-                <img src="images/onemount.png" alt="OneMOUNT" class="privacy-logo">
+                <img src="public/images/onemount.png" alt="OneMOUNT" class="privacy-logo">
                 <div>
                   <div class="privacy-name">OneMOUNT (VinMart, VinID)</div>
                   <div class="privacy-desc">Khuyến mãi mua sắm, tích điểm, voucher</div>
