--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@
         </button>
         <button class="profile-tab" onclick="showProfileTab('demographic')">
           <span class="tab-icon"><i class="ph-duotone ph-users"></i></span> Nhân khẩu học
-          <span class="tab-status pending">!</span>
+          <span class="tab-status complete">✓</span>
         </button>
         <button class="profile-tab" onclick="showProfileTab('extended')">
           <span class="tab-icon"><i class="ph-duotone ph-gear"></i></span> Mở rộng
@@ -1408,117 +1408,48 @@
 
       <div id="tab-demographic" class="profile-tab-content" style="display:none;">
         <div class="info-group">
+          <div class="info-group-header">
+            <div class="info-group-title">Thông tin nhân khẩu học</div>
+            <span class="badge-complete">✓ Đã hoàn thành</span>
+          </div>
+          
           <div class="form-section">
             <div class="form-section-title">Thông tin cá nhân</div>
-            <div class="form-row">
-              <div class="form-group"><label>Giới tính</label>
-                <select><option>Nam</option><option>Nữ</option><option>Khác</option></select>
-              </div>
-              <div class="form-group"><label>Tình trạng hôn nhân</label>
-                <select><option>Độc thân</option><option>Đã kết hôn</option><option>Ly hôn</option><option>Góa</option></select>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group"><label>Số người phụ thuộc</label>
-                <select><option>0</option><option>1</option><option>2</option><option>3</option><option>4+</option></select>
-              </div>
-              <div class="form-group"><label>Trình độ học vấn</label>
-                <select><option>THPT</option><option>Trung cấp/Cao đẳng</option><option>Đại học</option><option>Sau đại học</option></select>
-              </div>
-            </div>
+            <div class="info-row"><span class="info-label">Giới tính</span><span class="info-value">Nam</span></div>
+            <div class="info-row"><span class="info-label">Tuổi</span><span class="info-value">35 tuổi</span></div>
+            <div class="info-row"><span class="info-label">Tình trạng hôn nhân</span><span class="info-value">Đã kết hôn</span></div>
+            <div class="info-row"><span class="info-label">Trình độ học vấn</span><span class="info-value">Đại học</span></div>
           </div>
+
+          <div class="form-section">
+            <div class="form-section-title">Thông tin gia đình</div>
+            <div class="info-row"><span class="info-label">Số con</span><span class="info-value">2 con</span></div>
+            <div class="info-row"><span class="info-label">Con trai</span><span class="info-value">10 tuổi - Đang học lớp 5</span></div>
+            <div class="info-row"><span class="info-label">Con gái</span><span class="info-value">7 tuổi - Đang học lớp 2</span></div>
+            <div class="info-row"><span class="info-label">Cha mẹ bên nội</span><span class="info-value">Ông 65 tuổi (hưu trí), Bà 60 tuổi (hưu trí)</span></div>
+            <div class="info-row"><span class="info-label">Cha mẹ bên ngoại</span><span class="info-value">Ông 80 tuổi (hưu trí), Bà 78 tuổi (hưu trí)</span></div>
+            <div class="info-row"><span class="info-label">Tổng người phụ thuộc</span><span class="info-value" style="color:#c41e3a;font-weight:600;">6 người</span></div>
+          </div>
+
           <div class="form-section">
             <div class="form-section-title">Thông tin nghề nghiệp & thu nhập</div>
-            <div class="form-row">
-              <div class="form-group"><label>Nghề nghiệp</label>
-                <select><option>Nhân viên văn phòng</option><option>Quản lý/Giám đốc</option><option>Kinh doanh tự do</option><option>Chủ doanh nghiệp</option><option>Công chức/Viên chức</option><option>Hưu trí</option><option>Khác</option></select>
-              </div>
-              <div class="form-group"><label>Lĩnh vực công tác</label>
-                <select><option>Tài chính/Ngân hàng</option><option>Công nghệ</option><option>Bất động sản</option><option>Y tế</option><option>Giáo dục</option><option>Sản xuất</option><option>Bán lẻ</option><option>Khác</option></select>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group"><label>Thu nhập hàng tháng</label>
-                <select><option>Dưới 10 triệu</option><option>10-20 triệu</option><option>20-50 triệu</option><option>50-100 triệu</option><option>Trên 100 triệu</option></select>
-              </div>
-              <div class="form-group"><label>Nguồn thu nhập chính</label>
-                <select><option>Lương</option><option>Kinh doanh</option><option>Đầu tư</option><option>Cho thuê tài sản</option><option>Nhiều nguồn</option></select>
-              </div>
-            </div>
-            <div class="form-group"><label>Thâm niên công tác</label>
-              <select><option>Dưới 1 năm</option><option>1-3 năm</option><option>3-5 năm</option><option>5-10 năm</option><option>Trên 10 năm</option></select>
-            </div>
+            <div class="info-row"><span class="info-label">Nghề nghiệp</span><span class="info-value">Quản lý/Giám đốc</span></div>
+            <div class="info-row"><span class="info-label">Lĩnh vực công tác</span><span class="info-value">Tài chính/Ngân hàng</span></div>
+            <div class="info-row"><span class="info-label">Thâm niên công tác</span><span class="info-value">Trên 10 năm</span></div>
+            <div class="info-row"><span class="info-label">Thu nhập hàng tháng</span><span class="info-value" style="color:#4caf50;font-weight:600;">100,000,000đ</span></div>
+            <div class="info-row"><span class="info-label">Nguồn thu nhập</span><span class="info-value">Lương + Đầu tư</span></div>
           </div>
+
           <div class="form-section">
             <div class="form-section-title">Tình hình tài chính</div>
-            <div class="form-row">
-              <div class="form-group"><label>Chi tiêu hàng tháng</label>
-                <select><option>Dưới 5 triệu</option><option>5-10 triệu</option><option>10-20 triệu</option><option>20-50 triệu</option><option>Trên 50 triệu</option></select>
-              </div>
-              <div class="form-group"><label>Tỷ lệ tiết kiệm/tháng</label>
-                <select><option>Chưa tiết kiệm</option><option>Dưới 10%</option><option>10-20%</option><option>20-30%</option><option>Trên 30%</option></select>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group"><label>Tình trạng nhà ở</label>
-                <select id="housingStatus" onchange="toggleHousingDetail()">
-                  <option value="rent">Thuê</option>
-                  <option value="family">Ở cùng gia đình</option>
-                  <option value="owned">Sở hữu</option>
-                </select>
-              </div>
-              <div class="form-group" id="housingDetail" style="display:none;">
-                <label>Số lượng BĐS sở hữu</label>
-                <select><option>1</option><option>2</option><option>3</option><option>4+</option></select>
-              </div>
-            </div>
-            <div class="form-row" id="housingExtra" style="display:none;">
-              <div class="form-group"><label>Loại BĐS</label>
-                <div class="checkbox-group">
-                  <label><input type="checkbox"> Căn hộ</label>
-                  <label><input type="checkbox"> Nhà phố</label>
-                  <label><input type="checkbox"> Biệt thự</label>
-                  <label><input type="checkbox"> Đất nền</label>
-                </div>
-              </div>
-              <div class="form-group"><label>Tình trạng thanh toán</label>
-                <select><option>Đã trả hết</option><option>Đang trả góp</option><option>Cả hai</option></select>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group"><label>Phương tiện di chuyển</label>
-                <select id="vehicleStatus" onchange="toggleVehicleDetail()">
-                  <option value="motorbike">Xe máy</option>
-                  <option value="car">Ô tô</option>
-                  <option value="both">Cả xe máy và ô tô</option>
-                  <option value="public">Phương tiện công cộng</option>
-                </select>
-              </div>
-              <div class="form-group" id="vehicleDetail" style="display:none;">
-                <label>Số lượng ô tô</label>
-                <select><option>1</option><option>2</option><option>3+</option></select>
-              </div>
-            </div>
-            <div class="form-row" id="vehicleExtra" style="display:none;">
-              <div class="form-group"><label>Phân khúc xe</label>
-                <select><option>Phổ thông (dưới 700tr)</option><option>Trung cấp (700tr-1.5 tỷ)</option><option>Cao cấp (trên 1.5 tỷ)</option></select>
-              </div>
-              <div class="form-group"><label>Tình trạng thanh toán</label>
-                <select><option>Đã trả hết</option><option>Đang trả góp</option></select>
-              </div>
-            </div>
-            <div class="form-group"><label>Các khoản nợ hiện tại</label>
-              <div class="checkbox-group">
-                <label><input type="checkbox"> Vay mua nhà</label>
-                <label><input type="checkbox"> Vay mua xe</label>
-                <label><input type="checkbox"> Vay tiêu dùng</label>
-                <label><input type="checkbox"> Thẻ tín dụng</label>
-                <label><input type="checkbox"> Không có nợ</label>
-              </div>
-            </div>
+            <div class="info-row"><span class="info-label">Chi tiêu hàng tháng</span><span class="info-value" style="color:#c41e3a;">50,000,000đ</span></div>
+            <div class="info-row"><span class="info-label">Tỷ lệ tiết kiệm</span><span class="info-value" style="color:#1a5f7a;font-weight:600;">50% (50tr/tháng)</span></div>
+            <div class="info-row"><span class="info-label">Tình trạng nhà ở</span><span class="info-value">Sở hữu - Căn hộ chung cư 2PN (~3.5 tỷ)</span></div>
+            <div class="info-row"><span class="info-label">Phương tiện</span><span class="info-value">Ô tô - Phân khúc trung cấp (~800 triệu)</span></div>
+            <div class="info-row"><span class="info-label">Các khoản nợ</span><span class="info-value">Không có nợ</span></div>
           </div>
-          <button class="btn-update">Lưu thông tin</button>
-          <div class="privacy-note"><i class="ph-duotone ph-lock"></i> Thông tin được bảo mật theo tiêu chuẩn ngân hàng</div>
+
+          <button class="btn-update" onclick="alert('Thông tin đã được cập nhật!')">Chỉnh sửa thông tin</button>
         </div>
       </div>
 
