Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="Trang web demo mẫu giao diện hệ sinh thái tài chính - Không phải dịch vụ thật">
   <meta name="robots" content="noindex, nofollow">
   <meta name="disclaimer" content="Demo website - Not a real financial service">
+  <meta name="google-site-verification" content="kn8QQ_wWCKjiXFtxsZDatJEUnVz6c8fHHX4IxqRa1iw" />
   <title>[DEMO] Hệ Sinh Thái - Mẫu Giao Diện</title>
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <style>
